# audio_openSL

./: README.md  build.gradle  proguard-rules.pro
src/androidTest/java/com/cl/slack/audio_foreign/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  audio_recode_play.cpp  java_interface_wrap.cpp  opensl_example.c  opensl_example.h  opensl_io.h
src/main/java/com/cl/slack/audio_foreign/: AudioJNI.java  MainActivity.java
src/main/java/com/cl/slack/audio_foreign/opensl_example/: opensl_example.java  opensl_exampleJNI.java
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml
src/test/java/com/cl/slack/audio_foreign/: ExampleUnitTest.java
